--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
 server:
   port: 8080
   servlet:
-    context-path: /lunar
+    context-path: /lunar/admin
 
 ###################################################################################################
 ##  LOCAL
