--- a/build.gradle
+++ b/build.gradle
@@ -37,9 +37,12 @@ dependencies {
   runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.1'
   implementation 'com.auth0:java-jwt:3.1.0'
 
-  implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.0'
-  implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4:1.16'
+  // mysql
   runtimeOnly 'mysql:mysql-connector-java:8.0.25'
+
+  // jackson
+  implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.13.3'
+
 
   // test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
