--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
   profiles: local
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/lunar_db?serverTimezone=UTC&characterEncoding=UTF-8&passwordCharacterEncoding=UTF-8
+    url: jdbc:mysql://172.26.64.133:3306/lunar_db?serverTimezone=UTC&characterEncoding=UTF-8&passwordCharacterEncoding=UTF-8
     username: root
     password: lois@1234
     hikari:
@@ -55,4 +55,6 @@ spring:
       jdbc.connection: off
       org.hibernate.type.descriptor.sql.BasicBinder: TRACE
 
+menu-file:
+  upload-path: C:\lunar\menu\
 ---
