⭐add: HQ-ADMIN refresh token활용을 위한 redis 추가
⭐add: HQ-ADMIN refresh token활용을 위한 redis 추가

--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,10 @@ dependencies {
     implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
     implementation "com.querydsl:querydsl-apt:${queryDslVersion}"
 
+    // redis
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-redis', version: '2.7.3'
+
+
     // swagger
     implementation "io.springfox:springfox-boot-starter:3.0.0"
     implementation "io.springfox:springfox-swagger-ui:3.0.0"
